# serializer version: 1
# name: test_inner_join_rewriting[session-tracked-async-inner-join-rewrite-aiosqlite_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.sweetness > ?
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-inner-join-rewrite-asyncmy_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.sweetness > %s
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-inner-join-rewrite-asyncpg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.sweetness > $1::INTEGER
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-inner-join-rewrite-psycopg_async_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.sweetness > %(sweetness_1)s::INTEGER
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-no-inner-join-rewrite-aiosqlite_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.created_at > ?
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-no-inner-join-rewrite-asyncmy_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.created_at > %s
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-no-inner-join-rewrite-asyncpg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.created_at > $1::TIMESTAMP WITHOUT TIME
    ZONE
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-no-inner-join-rewrite-psycopg_async_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.created_at > %(created_at_1)s::TIMESTAMP WITHOUT TIME
    ZONE
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-sync-inner-join-rewrite-psycopg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.sweetness > %(sweetness_1)s::INTEGER
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-sync-inner-join-rewrite-sqlite_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.sweetness > ?
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-sync-no-inner-join-rewrite-psycopg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.created_at > %(created_at_1)s::TIMESTAMP WITHOUT TIME
    ZONE
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-sync-no-inner-join-rewrite-sqlite_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.created_at > ?
   ORDER BY color.id ASC,
            color__fruits.id ASC
  '''
# ---
